# internal-engineering-meeting-skip-gram-demo

./: README.md  pyproject.toml
src/internal_engineering_meeting_skip_gram_demo/: __init__.py
src/notebooks/: 01-Skip-Gram demo.ipynb
src/scripts/: wiki_corpus.py
